--- a/app/src/main/res/layout/bio_pop_up.xml
+++ b/app/src/main/res/layout/bio_pop_up.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/matched_pop_txt"
+        android:id="@+id/bio_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
