--- a/app/src/main/res/layout/bio_pop_up.xml
+++ b/app/src/main/res/layout/bio_pop_up.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
         />
 
 </RelativeLayout>
